--- a/.gcloudignore
+++ b/.gcloudignore
@@ -2,16 +2,16 @@
 # using gcloud. It follows the same syntax as .gitignore, with the addition of
 # "#!include" directives (which insert the entries of the given .gitignore-style
 # file at that point).
-#
 # For more information, run:
-#   $ gcloud topic gcloudignore
-#
+# $ gcloud topic gcloudignore
+
+node_modules/
+/src/
+
 .gcloudignore
-# If you would like to upload your .git directory, .gitignore file or files
-# from your .gitignore file, remove the corresponding line
-# below:
 .git
 .gitignore
-
-# Node.js dependencies:
-node_modules/
+LICENSE
+README.md
+tsconfig.json
+/service-account.json
