--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon --exec npx ts-node src/main.ts",
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "start": "node dist/src/main.js"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@types/express": "4.17.13",
     "@types/multer": "1.4.7",
     "nodemon": "2.0.15",
+    "rimraf": "3.0.2",
     "ts-node": "10.4.0",
     "typescript": "4.5.4"
   },
