--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "deploy": "npm run build && gcloud app deploy"
   },
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.17.2",
     "firebase-admin": "10.0.1",
     "multer": "1.4.4"
   },
   "devDependencies": {
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/multer": "1.4.7",
     "nodemon": "2.0.15",
