--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cors": "2.8.5",
+    "dotenv": "12.0.3",
     "express": "4.17.2",
     "firebase-admin": "10.0.1",
     "multer": "1.4.4"
