--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "cors": "2.8.5",
     "dotenv": "12.0.3",
     "express": "4.17.2",
-    "firebase-admin": "10.0.1",
+    "firebase-admin": "10.0.2",
+    "jsonwebtoken": "8.5.1",
     "multer": "1.4.4"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "1.4.7",
     "nodemon": "2.0.15",
     "rimraf": "3.0.2",
@@ -24,6 +26,6 @@
     "typescript": "4.5.4"
   },
   "engines": {
-    "node": "v16.13.0"
+    "node": "v16.13.2"
   }
 }
