--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "deploy": "npm run build && gcloud app deploy"
   },
   "dependencies": {
+    "axios": "0.26.1",
+    "cheerio": "1.0.0-rc.10",
     "cors": "2.8.5",
     "dotenv": "12.0.3",
     "express": "4.17.2",
-    "firebase-admin": "10.0.2",
+    "firebase-admin": "10.3.0",
     "jsonwebtoken": "8.5.1",
-    "multer": "1.4.4"
+    "multer": "1.4.4",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "8.5.8",
     "@types/multer": "1.4.7",
+    "@types/uuid": "8.3.4",
     "nodemon": "2.0.15",
     "rimraf": "3.0.2",
     "ts-node": "10.4.0",
